# s5cmd-python

./: README.md  pyproject.toml  s5cmd_test.txt  test_s5cmdpy.ipynb
notebooks/: test_run_file.txt  test_s5cmdpy.ipynb
s5cmdpy/: __init__.py  s5cmd_runner.py  uni_logger_standalone.py
